--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0",
-    "zustand": "^4.5.7"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.8",
